--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://melyasanya.github.io/goit-js-hw-08",
+  "homepage": "https://melyasanya.github.io/goit-js-hw-09.2",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09.2/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/melyasanya/goit-js-hw-08"
+    "url": "git+https://github.com/melyasanya/goit-js-hw-09.2"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/melyasanya/goit-js-hw-08/issues"
+    "url": "https://github.com/melyasanya/goit-js-hw-09.2/issues"
   },
   "dependencies": {
     "@vimeo/player": "^2.19.0",
